objects/Search_Merge_Duplicate_Contact_Pair__c.object
<CustomObject>
    <label>Search/Merge Duplicate Contact Pair</label>
    <nameField>
        <displayFormat>SMC-{0}</displayFormat>
        <label>Search/Merge Contact Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search/Merge Duplicate Contact Pair</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Contact Pair</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Contact_Pair</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_To_Keep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact To Keep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Contact from this Account</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Contact Pair (Contact To Keep)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Contact_Pair1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_To_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact To Merge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Contact Pair</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Contact_Pair</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Contacts_Cannot_be_the_Same</fullName>
        <active>true</active>
        <errorConditionFormula>Contact_To_Keep__c =  Contact_To_Merge__c</errorConditionFormula>
        <errorMessage>You have selected the same contact to merge that you selected to keep. Please select a different contact to merge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contacts_to_Merge_Must_be_Same_Community</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Contact_To_Keep__r.Account.Community__c  ) &lt;&gt; TEXT( Contact_To_Merge__r.Account.Community__c )</errorConditionFormula>
        <errorMessage>You have selected Contacts in two different communities. You may only merge contacts in the same community.</errorMessage>
    </validationRules>
</CustomObject>